--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>Sonic Runner - protótipo</title>
+    <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+    <header class="hud">
+        <div class="left"><strong>Sonic Runner</strong></div>
+        <div class="right">
+            <span id="score"></span>
+        </div>
+    </header>
+
+    <main class="wrap">
+        <canvas id="game" width="960" height="360" aria-label="Jogo estilo Dino"></canvas>
+    </main>
+
+    <footer class="footer">
+        <small>HTML5 Canvas • Impact Font • Assets: Sonic/SEGA (uso educacional)</small>
+    </footer>
+
+    <script src="script.js"></script>{
+</body>
+</html>
 
